# pulsar-rs

./: CONTRIBUTING.md  COPYRIGHT  Cargo.toml  PulsarApi.proto  README.md  build.rs
.github/: gen_test_certs.sh
.github/certs/: ca.cert.pem  ca.cert.srl  ca.key.pem  client.cert.pem  client.csr.pem  client.key.pem  server.cert.pem  server.conf  server.csr.pem  server.key.pem
.github/workflows/: rust.yml
client/: Cargo.toml
client/examples/: consumer.rs  producer.rs
client/src/: client.rs  connection.rs  connection_manager.rs  consumer.rs  error.rs  lib.rs  message.rs  producer.rs  reconnecting.rs  service_discovery.rs
examples/: README.md  batching.rs  consumer.rs  consumer_avro.rs  negative_ack.rs  producer.rs  reader.rs  round_trip.rs  transaction.rs
proto/: Cargo.toml  README.md
proto-compiler/: Cargo.toml  README.md
proto-compiler/src/: constants.rs  functions.rs  main.rs
proto/src/: lib.rs  pulsar.rs
proto/src/prost/: pulsar.proto.rs
pulsar/: Cargo.toml
pulsar-schema-confluent/: Cargo.toml
pulsar-schema-confluent/src/: lib.rs
pulsar/examples/: batching.rs  producer.rs
pulsar/src/: client.rs  connection.rs  connection_manager.rs  consumer.rs  executor.rs  lib.rs  message.rs  producer.rs  service_discovery.rs
r2d2/: Cargo.toml
r2d2/src/: lib.rs
src/: admin.rs  authentication.rs  client.rs  codec.rs  compression.rs  connection.rs  connection_manager.rs  consumer.rs  engine.rs  error.rs  executor.rs  lib.rs  main.rs  message.rs  producer.rs  proto.rs  reader.rs  resolver.rs  retry_op.rs  routing_policy.rs  service_discovery.rs  test_utils.rs  transaction.rs  transactions.rs  util.rs
src/authentication/: basic.rs  oauth2.rs  token.rs
src/consumer/: batched_message_iterator.rs  builder.rs  config.rs  data.rs  engine.rs  initial_position.rs  message.rs  mod.rs  multi.rs  negative_ack_backoff.rs  negative_ack_tracker.rs  options.rs  topic.rs
src/schema/: default.rs  key_value.rs  mod.rs  schema_id_util.rs
src/transaction/: coord.rs  meta_store_handler.rs  mod.rs
