[package]
name = "pulsar"
version = "6.0.1"
edition = "2021"
authors = [
    "Colin Stearns <cstearns@developers.wyyerd.com>",
    "Kevin Stenerson <kstenerson@developers.wyyerd.com>",
    "Geoffroy Couprie <contact@geoffroycouprie.com>",
]

license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/streamnative/pulsar-rs"
documentation = "https://docs.rs/pulsar"
description = "Rust client for Apache Pulsar"
keywords = ["pulsar", "api", "client"]

[dependencies]
bytes = "^1.4.0"
crc = "^3.0.1"
nom = { version = "^7.1.3", default-features = false, features = ["alloc"] }
prost = "^0.11.9"
prost-derive = "^0.11.9"
rand = "^0.8.5"
chrono = { version = "^0.4.24", default-features = false, features = [
    "clock",
    "std",
] }
futures-timer = "^3.0.2"
log = "^0.4.19"
url = "^2.4.0"
regex = "^1.9.1"
bit-vec = "^0.6.3"
futures = "^0.3.28"
futures-io = "^0.3.28"
native-tls = { version = "^0.2.11", optional = true }
rustls = { version = "^0.21.5", optional = true }
webpki-roots = { version = "^0.25.1", optional = true }
pem = "^3.0.0"
tokio = { version = "^1.29.1", features = [
    "rt",
    "net",
    "time",
], optional = true }
tokio-util = { version = "^0.7.8", features = ["codec"], optional = true }
tokio-rustls = { version = "^0.24.1", optional = true }
tokio-native-tls = { version = "^0.3.1", optional = true }
async-std = { version = "^1.12.0", features = [
    "attributes",
    "unstable",
], optional = true }
asynchronous-codec = { version = "^0.6.1", optional = true }
async-rustls = { version = "^0.4.0", optional = true }
async-native-tls = { version = "^0.5.0", optional = true }
lz4 = { version = "^1.24.0", optional = true }
flate2 = { version = "^1.0.26", optional = true }
zstd = { version = "^0.12.4", optional = true }
snap = { version = "^1.1.0", optional = true }
openidconnect = { version = "^3.3.0", optional = true }
oauth2 = { version = "^4.4.1", optional = true }
serde = { version = "^1.0.175", features = ["derive"], optional = true }
serde_json = { version = "^1.0.103", optional = true }
tracing = { version = "^0.1.37", optional = true }
async-trait = "^0.1.68"
data-url = { version = "^0.2.0", optional = true }
uuid = { version = "^1.4.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
serde = { version = "^1.0.175", features = ["derive"] }
serde_json = "^1.0.103"
env_logger = "^0.10.0"
tokio = { version = "^1.29.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "^0.11.9"
protobuf-src = { version = "1.1.0", optional = true }

[features]
default = ["compression", "tokio-runtime", "async-std-runtime", "auth-oauth2"]
compression = ["lz4", "flate2", "zstd", "snap"]
tokio-runtime = ["tokio", "tokio-util", "native-tls", "tokio-native-tls"]
tokio-rustls-runtime = [
    "tokio",
    "tokio-util",
    "tokio-rustls",
    "rustls",
    "webpki-roots",
]
async-std-runtime = [
    "async-std",
    "asynchronous-codec",
    "native-tls",
    "async-native-tls",
]
async-std-rustls-runtime = [
    "async-std",
    "asynchronous-codec",
    "async-rustls",
    "rustls",
    "webpki-roots",
]
auth-oauth2 = ["openidconnect", "oauth2", "serde", "serde_json", "data-url"]
telemetry = ["tracing"]
protobuf-src = ["dep:protobuf-src"]
