[package]
name = "pulsar"
version = "6.4.1"
edition = "2021"
authors = [
    "Colin Stearns <cstearns@developers.wyyerd.com>",
    "Kevin Stenerson <kstenerson@developers.wyyerd.com>",
    "Geoffroy Couprie <contact@geoffroycouprie.com>",
]

license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/streamnative/pulsar-rs"
documentation = "https://docs.rs/pulsar"
description = "Rust client for Apache Pulsar"
keywords = ["pulsar", "api", "client"]

[dependencies]
async-channel = "^2.3.1"
async-trait = "^0.1.88"
async-std = { version = "^1.13.1", features = ["attributes", "unstable"], optional = true }
async-native-tls = { version = "^0.5.0", optional = true }
asynchronous-codec = { version = "^0.7.0", optional = true }
bytes = "^1.9.0"
chrono = { version = "^0.4.41", default-features = false, features = ["clock", "std"] }
crc = "^3.3.0"
data-url = { version = "^0.3.1", optional = true }
flate2 = { version = "^1.1.1", optional = true }
futures = "^0.3.31"
futures-rustls = { version = "^0.26.0", optional = true } # replacement of crate async-rustls (also a fork of tokio-rustls)
log = "^0.4.27"
lz4 = { version = "^1.28.0", optional = true }
native-tls = { version = "^0.2.12", optional = true }
nom = { version = "^7.1.3", default-features = false, features = ["alloc"] }
openidconnect = { version = "^4.0.0", optional = true }
oauth2 = { version = "^5.0.0", optional = true }
pem = "^3.0.4"
prost = "^0.13.4"
prost-derive = "^0.13.4"
rand = "^0.8.5"
regex = "^1.11.1"
rustls = { version = "^0.23.27", optional = true }
snap = { version = "^1.1.1", optional = true }
serde = { version = "^1.0.219", features = ["derive"], optional = true }
serde_json = { version = "^1.0.140", optional = true }
tokio = { version = "^1.45.0", features = ["rt", "net", "time"], optional = true }
tokio-util = { version = "^0.7.15", features = ["codec"], optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
tokio-native-tls = { version = "^0.3.1", optional = true }
tracing = { version = "^0.1.41", optional = true }
url = "^2.5.4"
uuid = { version = "^1.16.0", features = ["v4", "fast-rng"] }
webpki-roots = { version = "^1.0.0", optional = true }
zstd = { version = "^0.13.2", optional = true }

[dev-dependencies]
env_logger = "^0.11.8"
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0.133"
tokio = { version = "^1.42.0", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.5.0"

[build-dependencies]
prost-build = "^0.13.4"
protobuf-src = { version = "^2.1.0", optional = true }

[features]
async-std-runtime = ["async-std", "asynchronous-codec", "native-tls", "async-native-tls"]
async-std-rustls-runtime = ["async-std", "asynchronous-codec", "futures-rustls", "rustls", "webpki-roots"]
auth-oauth2 = ["openidconnect", "oauth2", "serde", "serde_json", "data-url"]
compression = ["lz4", "flate2", "zstd", "snap"]
default = ["compression", "tokio-runtime", "async-std-runtime", "auth-oauth2"]
protobuf-src = ["dep:protobuf-src"]
telemetry = ["tracing"]
tokio-runtime = ["tokio", "tokio-util", "native-tls", "tokio-native-tls"]
tokio-rustls-runtime = ["tokio", "tokio-util", "tokio-rustls", "rustls", "webpki-roots"]
