[package]
name = "pulsar"
version = "0.2.0"
edition = "2018"
authors = [
    "Colin Stearns <cstearns@developers.wyyerd.com>",
    "Kevin Stenerson <kstenerson@developers.wyyerd.com>"
]

license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/wyyerd/pulsar-rs"
documentation = "https://docs.rs/pulsar"
description = "Rust API bindings for Apache Pulsar"
keywords = ["pulsar", "api"]
categories = ["api-bindings"]

[badges]
travis-ci = {repository = "wyyerd/pulsar-rs"}

[dependencies]
bytes = "0.4.0"
crc = "1.0.0"
futures = "0.3.1"
nom = "4.0.0"
prost = { git = "https://github.com/vivint-smarthome/prost", branch = "syn-quote-proc_macro2-1.0" }
prost-derive = { git = "https://github.com/vivint-smarthome/prost", branch = "syn-quote-proc_macro2-1.0" }
tokio = "0.2.0-alpha.6"
rand = "0.7.2"
serde = "1.0.80"
serde_derive = "1.0"
serde_json = "1.0.32"
chrono = "0.4.6"
futures-timer = "2.0.2"
log = "0.4.6"
trust-dns-resolver = "0.18.0-alpha.1"
url = "2.1.0"
regex = "1.1.7"

static_assertions = "1.1.0"

[build-dependencies]
prost-build = { git = "https://github.com/vivint-smarthome/prost", branch = "syn-quote-proc_macro2-1.0" }
