[package]
name = "pulsar-rs-proto-compiler"
version = "0.1.0"
authors = ["Rui Fu <rfu@streamnative.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir         = { version = "2.3" }
prost-build     = { version = "0.6" }
git2            = { version = "0.13" }
tempdir         = { version = "0.3" }
subtle-encoding = { version = "0.5" }

[workspace]