[package]
name = "pulsar-schema-confluent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Confluent Schema Registry integration for pulsar-rs"
repository = "https://github.com/streamnative/pulsar-rs"

[dependencies]
pulsar = { path = "..", default-features = false, features = ["tokio-runtime"] }
async-trait = "0.1"
schema_registry_converter = { version = "4.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
