[package]
name = "r2d2_pulsar"
version = "0.1.0"
authors = ["Colin Stearns <cstearns@developers.wyyerd.com>"]

license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/wyyerd/pulsar-rs"
documentation = "https://docs.rs/r2d2_pulsar"
description = "Connection pooling for pulsar client"
keywords = ["pulsar", "api"]
categories = ["api-bindings"]

[badges]
travis-ci = {repository = "wyyerd/pulsar-rs"}

[dependencies]
tokio = "0.1.11"
failure = "0.1.3"
futures = "0.1.25"
r2d2 = "0.8.2"
pulsar = { path = "../client" }
serde = "1.0.80"
serde_derive = "1.0.80"
