[package]
name = "r2d2_pulsar"
version = "0.1.2"
authors = ["Colin Stearns <cstearns@developers.wyyerd.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/wyyerd/pulsar-rs"
documentation = "https://docs.rs/r2d2_pulsar"
description = "Connection pooling for pulsar client"
keywords = ["pulsar", "api"]
categories = ["api-bindings"]

[badges]
travis-ci = {repository = "wyyerd/pulsar-rs"}

[dependencies]
tokio = "0.1.11"
futures = "0.1.25"
r2d2 = "0.8.2"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.pulsar]
path = "../client"
